--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -2,12 +2,10 @@ name: Shell commands
 
 on: [push]
 
-job: 
-  build: 
+jobs: 
+  run-shell-command: 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
       - name: multiline script 
         run: | 
           echo "hello"
