--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -3,13 +3,13 @@ name: Trigger Site Rebuild on a CRON Schedule
 on:
   schedule:
     # Runs "at minute 50 past every hour" (see https://crontab.guru)
-    - cron: '50 * * * *'
+    - cron: '55 * * * *'
 jobs:
-  build:
-    name: Trigger Site Rebuild
+  run-github-actions:
     runs-on: ubuntu-latest
     steps:
       - name: cURL request
-         run: echo 'test'
+        run: |
+           echo "test"
 
           
