--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -3,7 +3,7 @@ name: Trigger Site Rebuild on a CRON Schedule
 on:
   schedule:
     # Runs "at minute 50 past every hour" (see https://crontab.guru)
-    - cron: '55 * * * *'
+    - cron: '59 * * * *'
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
@@ -11,5 +11,6 @@ jobs:
       - name: cURL request
         run: |
            echo "test"
+           echo "abc"
 
           
