--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -3,14 +3,14 @@ name: Trigger Site Rebuild on a CRON Schedule
 on:
   schedule:
     # Runs "at minute 50 past every hour" (see https://crontab.guru)
-    - cron: '59 * * * *'
+    - cron: '2 * * * *'
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
-      - name: cURL request
+      - name: test
         run: |
-           echo "test"
-           echo "abc"
+           npm -v
+           pwd
 
           
