--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,9 +1,12 @@
 name: Trigger Site Rebuild on a CRON Schedule
 
 on:
+  push:
+    branches: [ main ]
+    
   schedule:
     # Runs "at minute 50 past every hour" (see https://crontab.guru)
-    - cron: '6 * * * *'
+    - cron: '10 * * * *'
 jobs:
   run-github-actions:
     runs-on: ubuntu-latest
